--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   },
   "homepage": "https://github.com/kelsjon3/MobileSD#readme",
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.6.8",
+    "better-sqlite3": "^9.4.3",
     "dotenv": "^16.4.5",
-    "event-source-polyfill": "^1.0.31",
-    "express": "^4.19.2",
-    "uuid": "^11.1.0"
+    "express": "^4.18.2",
+    "uuid": "^9.0.1",
+    "eventsource": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
