--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   "homepage": "https://github.com/kelsjon3/MobileSD#readme",
   "dependencies": {
     "axios": "^1.6.8",
-    "better-sqlite3": "^9.4.3",
+    "better-sqlite3": "^11.10.0",
     "dotenv": "^16.4.5",
+    "eventsource": "^2.0.2",
     "express": "^4.18.2",
-    "uuid": "^9.0.1",
-    "eventsource": "^2.0.2"
+    "socket.io": "^4.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
