--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.4.5",
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "socket.io": "^4.8.1",
     "uuid": "^9.0.1"
   },
