--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "mobilesd",
+  "name": "stablequeue",
   "version": "1.0.0",
-  "description": "",
+  "description": "Queue Manager for Stable Diffusion and other AI tools",
   "main": "app.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:api": "node scripts/runApiTests.js",
+    "test:api:verbose": "VERBOSE_TESTS=true node scripts/runApiTests.js",
+    "test:api:manual": "node scripts/manualApiTests.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kelsjon3/MobileSD.git"
+    "url": "git+https://github.com/kelsjon3/StableQueue.git"
   },
-  "keywords": [],
+  "keywords": [
+    "stable-diffusion",
+    "queue",
+    "ai",
+    "forge"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
-    "url": "https://github.com/kelsjon3/MobileSD/issues"
+    "url": "https://github.com/kelsjon3/StableQueue/issues"
   },
-  "homepage": "https://github.com/kelsjon3/MobileSD#readme",
+  "homepage": "https://github.com/kelsjon3/StableQueue#readme",
   "dependencies": {
     "axios": "^1.6.8",
     "better-sqlite3": "^11.10.0",
