Optimize model preview URL handling to prevent rate limiting - Updated preview endpoint to use stored preview_path from database - Modified frontend to only generate preview URLs when preview_path exists - Added preview_url column to models table for storing ready-to-use URLs - Updated database schema with migration logic for existing databases - Improved model card rendering to handle null preview URLs gracefully - Added hash calculation utilities for model identification - Enhanced model database operations to support both file paths and URLs - This eliminates unnecessary API calls and prevents rate limiting issues when the Models tab loads by storing pre-built URLs in the database

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,9 @@
 PORT=3000
 CONFIG_DATA_PATH=/usr/src/app/data
 
-# Stable Diffusion Model Paths
+# Stable Diffusion Model Paths (NEW CONSOLIDATED APPROACH)
+MODEL_PATH=/app/models
 STABLE_DIFFUSION_SAVE_PATH=/app/outputs
-LORA_PATH=/app/models/Lora
-CHECKPOINT_PATH=/app/models/Stable-diffusion
 
 # External API Services
 CIVITAI_API_KEY=your_civitai_api_key_here
