--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "better-sqlite3": "^11.10.0",
+    "canvas": "^2.11.2",
     "dotenv": "^16.4.5",
     "eventsource": "^2.0.2",
     "express": "^4.18.2",
